<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_baseline_calculate_24"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_baseline_audiotrack_24"
            android:title="@string/menu_audio" />
        <item
            android:id="@+id/nav_hardware"
            android:icon="@drawable/ic_baseline_touch_app_24"
            android:title="@string/menu_hardware" />
    </group>
</menu>