<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_hardware"
        android:name="com.example.MireaProject.HardwareFragment"
        android:label="@string/menu_hardware"
        tools:layout="@layout/fragment_hardware" />
    <fragment
        android:id="@+id/nav_audio"
        android:name="com.example.MireaProject.AudioFragment"
        android:label="@string/menu_audio"
        tools:layout="@layout/fragment_audio" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="com.example.MireaProject.BrowserFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_browser" />
    <fragment
        android:id="@+id/nav_calculator"
        android:name="com.example.MireaProject.CalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.MireaProject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.MireaProject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.MireaProject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>